Wed Nov 11 18:30:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): look up the key, then get default
	  value and raise KeyError if the returned value is nil.
	  [ruby-dev:49338] [Ruby trunk - Bug #11677]

Wed Nov 11 17:38:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (local_var_list_add): skip internal local variable
	  name by its type but not if it has a name.  internal local
	  variable names are just unique per frame, not globally.
	  [ruby-core:71437] [Bug #11674]

Wed Nov 11 14:14:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* transcode.c: fix a typo
	[ci skip][fix GH-1091] Patch by @jwworth

Wed Nov 11 11:58:38 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (initialize): Connections are in passive mode per
	  default now.  The default mode can be changed by
	  Net::FTP.default_passive=.
	  [ruby-core:71146] [Feature #11612]

	* lib/net/ftp.rb (default_passive=, default_passive): new methods.

Wed Nov 11 09:03:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): respect default value of a hash.  no
	  longer raises KeyError unless the default value of the hash is
	  nil.  [ruby-core:71354] [Bug #11661]

Tue Nov 10 20:35:12 2015  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Remove indicator for "frozen_string_literal: true".

	* lib/pp.rb: Ditto.

	* lib/prettyprint.rb: Ditto.

	* lib/resolv.rb: Ditto.

	* lib/securerandom.rb: Ditto.

	* lib/tmpdir.rb: Ditto.

	* lib/unicode_normalize/tables.rb: Ditto.

	* test/net/ftp/test_buffered_socket.rb: Ditto.

	* test/net/ftp/test_mlsx_entry.rb: Ditto.

	* test/open-uri/test_open-uri.rb: Ditto.

	* test/open-uri/test_ssl.rb: Ditto.

	* test/pathname/test_pathname.rb: Ditto.

	* test/test_pp.rb: Ditto.

	* test/test_prettyprint.rb: Ditto.

	* tool/transcode-tblgen.rb: Ditto.

	* ext/pathname/lib/pathname.rb: Ditto.

Tue Nov 10 18:42:24 2015  Aleksandrs Ledovskis  <aleksandrs@ledovskis.lv>
